# mikioscoonline

./: .env.example  .gitattributes  .gitignore  .mcp.json  .vercelignore  CHANGELOG.md  NOTAS-ESCALADO-SAAS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  vercel.json  vitest.config.ts
docs/: 2026-07-10-sesion-completa.md  AUDITORIA-CODIGO-2026-07-16.md  CONFIG-PRODUCCION-PENDIENTE.md  MODELO-FINANCIERO.md  PENDIENTE-STOCK-FASE2.md  REPORTE-NUCLEO.md  REVISION-CODIGO-2026-07-14.md  actualizaciones-app.md  pasos-produccion.md  prompt-cc-app-escritorio.md  prompt-cc-descarga-actualizacion.md  resumen-sesion-2026-07-22-app-escritorio.md  seguridad-neon-database-url-kiosco.md
docs/handoffs/: prompt-cc-backup-automatico.md  prompt-cc-pasos-produccion.md  (+1 more)
flutter_app/: pubspec.yaml
prisma/: schema.dev.prisma  schema.prisma  seed.ts
public/: manifest.json  sw.js
scripts/: backfill-default.mjs  fetch-node.mjs  gen-config-caja-nueva.mjs  gen-icons.mjs  gen-latest-json.mjs  gen-migracion-sqlite.mjs  kiosco-backup-once.ts  kiosco-backup-scheduler.mjs  kiosco-download-data.ts  prepare-standalone.mjs  release.mjs  scrape-serra.mjs  start-kiosco-server.mjs  start-local-server.mjs
src/: auth.config.ts  auth.ts  proxy.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/loading-page/: index.html
src-tauri/resources/: dev-template.db
src-tauri/resources/migraciones-sqlite/: 20260724173254_recuento-pendiente.sql
src-tauri/src/: lib.rs
(+387 files in other folders)
