[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
# "bundled": trae su propio SQLite compilado (sin depender de una lib del
# sistema) — mismo criterio que ya usa better-sqlite3 del lado Node. Se usa
# solo para aplicar migraciones de schema a dev.db al arrancar, ver lib.rs.
rusqlite = { version = "0.32", features = ["bundled"] }
